fix spacing

--- a/scss/components/_blog.scss
+++ b/scss/components/_blog.scss
@@ -5,7 +5,7 @@
         }
     }
     & .wp-block-latest-posts__featured-image {
-        margin-bottom: 2rem;
+        margin-bottom: 0.5rem;
         & a {
             width: 100%;
             & img {
