--- a/style.css
+++ b/style.css
@@ -259,7 +259,7 @@
 }
 
 .blog__posts .wp-block-latest-posts__featured-image {
-	margin-bottom: 2rem;
+	margin-bottom: 0.5rem;
 }
 
 .blog__posts .wp-block-latest-posts__featured-image a {
